<resources>
    <string name="app_name">Botellap</string>
    <string name="saludo">¡Hola! ¿Ya te hidrataste hoy?</string>
    <string name="carga_100">Cargar 100mL</string>
    <string name="resetear_botella">Nueva Botella</string>
    <string name="aviso_consumo">CONSUMO DE HOY</string>
    <string name="unidad_medida">mL</string>
    <string name="valor_inicial">0</string>
    <string name="descripcion_imagen">Imagen que muestra el nivel \"simbolico\" de la botella de agua consumida</string>
</resources>
